Font size and spacing fix.

--- a/source/assets/stylesheets/application.css.sass
+++ b/source/assets/stylesheets/application.css.sass
@@ -53,6 +53,8 @@ body
     text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.8)
     h1
       padding-top: 50px
+      line-height: 45px
+      letter-spacing: 1px
     h4
       line-height: 30px
       letter-spacing: 1.5px
@@ -63,6 +65,7 @@ body
     display: block
     margin-top: 90px
     background-color: #2dbd9a
+    text-align: center
   .half
     position: absolute
     top: 0px
